<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/accent_material_light">

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="My Nanodegree Apps!"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSpotifyTxt"
            android:id="@+id/btnSpotify"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/material_deep_teal_200"
            android:width="@dimen/button_width"
            android:onClick="clickSpotify"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnScoreTxt"
            android:id="@+id/btnScore"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/material_deep_teal_200"
            android:width="@dimen/button_width"
            android:onClick="clickScore"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLibraryTxt"
            android:id="@+id/btnLibrary"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/material_deep_teal_200"
            android:width="@dimen/button_width"
            android:onClick="clickLibrary"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnBuildTxt"
            android:id="@+id/btnBuild"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/material_deep_teal_200"
            android:width="@dimen/button_width"
            android:onClick="clickBuild"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnReaderTxt"
            android:id="@+id/btnReader"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/material_deep_teal_200"
            android:width="@dimen/button_width"
            android:onClick="clickReader"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMyAppTxt"
            android:id="@+id/btnMyApp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/material_grey_100"
            android:width="@dimen/button_width"
            android:onClick="clickMyApp"/>
    </LinearLayout>

</RelativeLayout>
